# arch-microservice

./: Dockerfile  README.md  pyproject.toml  requirements.txt
.github/workflows/: build_publish.yaml  build_test.yaml  deploy.yaml  run_arch_microservice.yaml
.github/workflows/ansible/: ansible.cfg  hosts  run_arch_microservice.yaml
helpers/: mock.db  mock.xlsx  project.sql
microservice/: __init__.py  main.py
microservice/config/: constants.py  loader.py  setup.py
microservice/core/: handling_functions.py  run.py
microservice/core/handling_datetime/: handling_datetime.py
microservice/infrastructure/: csv_driver.py  sql_driver.py
microservice/logging_module/: handler.py  handling_logger.py
